WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305001
CSS clip-path breaks when any duplicate-ID clipPath element is removed from DOM
https://bugs.webkit.org/show_bug.cgi?id=305001
Summary
CSS clip-path breaks when any duplicate-ID clipPath element is removed from DOM
Taher
Reported
2026-01-06 12:57:32 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-06 12:57:38 PST
<
rdar://problem/167642834
>
Taher
Comment 2
2026-01-06 13:13:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56153
Taher
Comment 3
2026-01-06 13:50:55 PST
<
rdar://problem/147015037
>
EWS
Comment 4
2026-01-06 19:13:07 PST
Committed
305197@main
(b61039ea9106): <
https://commits.webkit.org/305197@main
> Reviewed commits have been landed. Closing PR #56153 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug